front-proxy/envoy-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
spec:
  type: LoadBalancer
  selector:
    app: envoy-gateway
  ports:
  - name: envoy-sidecar-port
    protocol: TCP
    port: 8786
    targetPort: envoy-sidecar
